# file: programs/nft_staking/Cargo.toml

[package]
name = "nft_staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# These lines correctly inherit their versions from the root Cargo.toml
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
mpl-token-metadata = { workspace = true }